fix(docs): fixed navbar overlap issues

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -56,7 +56,7 @@ html[data-theme="dark"] {
   background: var(--ifm-menu-link-sublist-icon) 50% / 1rem 1rem;
 }
 
-.menu__list-item-collapsible > a {
+.menu__list-item-collapsible>a {
   font-weight: 600;
 }
 
@@ -70,7 +70,7 @@ html[data-theme="dark"] {
   font-weight: 700;
 }
 
-.theme-doc-sidebar-item-link-level-1 > a {
+.theme-doc-sidebar-item-link-level-1>a {
   font-weight: 600;
 }
 
@@ -327,6 +327,7 @@ html[data-theme="dark"] .nav-git:hover {
     padding-left: 2.4rem !important;
     padding-right: 2.4rem !important;
   }
+
   .docPage_node_modules-\@docusaurus-theme-classic-lib-theme-DocPage-Layout-styles-module,
   .docPage__5DB {
     padding-left: 1rem !important;
@@ -339,6 +340,7 @@ h2[itemprop="headline"] a {
   font-weight: 600;
   color: #1c1e21;
 }
+
 html[data-theme="dark"] h2[itemprop="headline"] a {
   color: #f1f0f1;
 }
@@ -364,18 +366,32 @@ html[data-theme="dark"] h2[itemprop="headline"] a {
 .example-quote {
   border-left: 6px solid rgb(76, 179, 212);
   background: rgb(25, 60, 71);
+
   p {
     margin: 0;
     padding: 0.5em 0 0.2em;
   }
+
   strong {
     color: white;
   }
+
   code {
     background: rgb(213, 213, 213);
   }
 }
 
-.example-list-checkbox, .submit-new-example {
+.example-list-checkbox,
+.submit-new-example {
   border: 1px solid rgb(210, 210, 210);
+}
+
+/* Fix for large navigation bar on desktop, remove the contact and blog links on certain sizes */
+@media (max-width: 1566px) {
+  .navbar__item[href="https://www.winglang.io/contact"] {
+    display: none;
+  }
+  .navbar__item[href="/blog"] {
+    display: none;
+  }
 }
